Fix issue with dark mode causing white on white

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,3 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 html,
 body {
   max-width: 100vw;
@@ -24,12 +19,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 h1,
